--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
+		<node.version>v14.8.0</node.version>
+		<yarn.version>v1.12.1</yarn.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,6 +45,8 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
