--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,12 @@
       <groupId>com.google.code.gson</groupId>  
       <artifactId>gson</artifactId>  
       <version>2.9.1</version> 
-    </dependency>  
-    <dependency> 
-      <groupId>org.springframework.boot</groupId>  
-      <artifactId>spring-boot-starter-test</artifactId>  
-      <scope>test</scope> 
-    </dependency>  
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency> 
       <groupId>org.webjars</groupId>  
       <artifactId>sockjs-client</artifactId>  
@@ -74,7 +74,27 @@
       <groupId>org.webjars</groupId>  
       <artifactId>stomp-websocket</artifactId>  
       <version>2.3.3</version> 
-    </dependency> 
+    </dependency>
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>RELEASE</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>de.flapdoodle.embed</groupId>
+      <artifactId>de.flapdoodle.embed.mongo</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>  
   <build> 
     <plugins> 
